--- a/categoria.html
+++ b/categoria.html
@@ -17,8 +17,10 @@
     <a href="index.html">Inicio</a>
     <a href="productos.html">Productos</a>
     <a href="proveedor.html">Proveedores</a>
-    <a href="#contacto">Contacto</a>
-  </nav>
+    <a href="contacto.html">Contacto</a>
+    <a href="login.html" id="loginLink">Iniciar Sesión</a>
+    <a href="#" id="logoutLink" onclick="cerrarSesion()" style="display:none; color: #ef4444;">Cerrar Sesión</a>
+</nav>
 </header>
 
 <!-- ================= HERO ================= -->
