Tercer commit: modificacion de la pagina de contacto y modificacion de formularios

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h3>Enlaces rápidos</h3>
             <a href="index.html">Inicio</a>
             <a href="productos.html">Productos</a>
-            <a href="proveedores.html">Proveedores</a>
+            <a href="proveedor.html">Proveedores</a>
             <a href="contacto.html">Contacto</a>
         </div>
         <div class="footer-column">
