--- a/admin.html
+++ b/admin.html
@@ -5,21 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel de Administración | Mercado Raíz</title>
     
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/admin.styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     
-    <style>
-        /* Ajustes específicos para el Dashboard que no interfieren con la tienda */
-        .admin-body { background: var(--bg-main); display: flex; min-height: 100vh; overflow-x: hidden; }
-        .sidebar-divider { border: 0; border-top: 1px solid rgba(255,255,255,0.1); margin: 20px 0; }
-        #mapAdmin { height: 300px; width: 100%; border-radius: 8px; margin-top: 10px; border: 2px solid var(--accent-soft); }
-        .modal-pago { 
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
-            background: rgba(0,0,0,0.6); display: none; align-items: center; justify-content: center; z-index: 2000; 
-        }
-        .modal-content { background: white; padding: 30px; border-radius: var(--radius); width: 90%; max-width: 600px; max-height: 90vh; overflow-y: auto; }
-    </style>
 </head>
 <body class="admin-body">
 
