--- a/carrito.html
+++ b/carrito.html
@@ -4,64 +4,96 @@
     <meta charset="UTF-8">
     <title>Carrito de compras | Mercado Raíz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
 <header class="header">
-    <div class="logo">Mercado Raíz</div>
+    <div class="logo">Mercado Raíz <span>Cayambe</span></div>
     <nav>
         <a href="index.html">Inicio</a>
         <a href="productos.html">Productos</a>
-        <a href="proveedor.html">Proveedores</a>
+        <a href="proveedor.html">Proveedores</a> 
         <a href="contacto.html">Contacto</a>
         <a href="login.html" id="loginLink">Iniciar Sesión</a>
-        <a href="#" id="logoutLink" onclick="cerrarSesion()" style="display:none; color: #ef4444;">Cerrar Sesión</a>
+        <a href="#" id="logoutLink" onclick="cerrarSesion()" class="hidden" style="color: #ef4444;">Cerrar Sesión</a>
     </nav>
 </header>
 
-<section class="hero hero-small">
-    <h1>🛒 Carrito de compras</h1>
-    <p>Revisa tus productos y finaliza tu pedido para apoyar al comercio justo de Cayambe.</p>
+<section class="hero hero-small" style="padding: 60px 5%; min-height: auto;">
+    <h1>🛒 Tu Carrito</h1>
+    <p>Revisa tus productos seleccionados de las fincas de Cayambe.</p>
 </section>
 
-<main class="cart-container" id="cartContainer" style="padding: 20px; min-height: 300px;">
-    <div id="lista-carrito"></div>
+<main class="cart-container" id="cartContainer" style="max-width: 1000px; margin: 0 auto; padding: 40px 20px;">
+    <div id="lista-carrito" class="glass-card">
+        </div>
 </main>
 
-<div class="cart-actions" style="text-align: center; padding: 20px;">
-    <a href="productos.html" class="secondary-btn">← Seguir comprando</a>
-    <button onclick="realizarPedido()" class="btn-primary" style="background: #22c55e; color: white; padding: 15px 30px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold;">
+<div class="cart-actions" style="text-align: center; padding-bottom: 60px;">
+    <a href="productos.html" class="chip" style="text-decoration: none; display: inline-block; margin-right: 15px;">
+        ← Seguir comprando
+    </a>
+    <button onclick="realizarPedido()" class="btn-add" style="width: auto; padding: 15px 40px; background: #22c55e;">
         Realizar pedido y Pagar
     </button>
 </div>
 
 <div id="modalPago" class="modal-pago">
     <div class="modal-content">
-        <h3>Finalizar Pedido</h3>
-        <p>Realiza tu transferencia o escanea el QR de Deuna.</p>
-        <div style="background: #f1f5f9; padding: 20px; margin: 15px 0; border-radius: 8px;">
-            <p><strong>Escanea aquí:</strong></p>
-            <div style="width: 150px; height: 150px; background: #333; color: white; margin: auto; display: flex; align-items: center; justify-content: center;">QR DEUNA</div>
+        <h3 style="color: var(--primary-forest);">Finalizar Pedido</h3>
+        <p style="margin-bottom: 15px;">Completa tu apoyo al productor mediante transferencia o Deuna.</p>
+        
+        <div style="background: #f1f5f9; padding: 20px; margin: 15px 0; border-radius: 12px; border: 2px dashed #2d9d68;">
+            <p><strong>QR de Pago Rápido:</strong></p>
+            <div style="width: 150px; height: 150px; background: #111; color: white; margin: 15px auto; display: flex; flex-direction: column; align-items: center; justify-content: center; border-radius: 10px;">
+                <i class="fas fa-qrcode fa-4x"></i>
+                <small style="margin-top:5px;">MERCADO RAÍZ</small>
+            </div>
         </div>
-        <div style="text-align:left; font-size:13px; background:#f8fafc; padding:12px; border: 1px solid #e2e8f0; border-radius:8px;">
+
+        <div style="text-align:left; font-size:13px; background:#f8fafc; padding:15px; border: 1px solid #e2e8f0; border-radius:8px;">
             <strong>Datos Bancarios:</strong><br>
             Banco Pichincha (Ahorros)<br>
             Cuenta: 2200XXXXXX<br>
             A nombre de: Mercado Raíz Cayambe
         </div>
-        <button onclick="confirmarPedido()" style="margin-top:20px; width: 100%; background:#22c55e; color:white; border:none; padding:12px; border-radius:6px; cursor:pointer;">
+
+        <button onclick="confirmarPedido()" style="margin-top:20px; width: 100%; background:#22c55e; color:white; border:none; padding:14px; border-radius:8px; cursor:pointer; font-weight: bold;">
             He realizado el pago
         </button>
-        <button onclick="cerrarModal()" style="background:none; border:none; color:gray; cursor:pointer; display:block; margin:10px auto;">Cancelar</button>
+        <button onclick="cerrarModal()" style="background:none; border:none; color:gray; cursor:pointer; display:block; margin:15px auto; text-decoration: underline;">Cancelar</button>
     </div>
 </div>
 
-<footer class="footer">
-    <div class="footer-bottom">© 2026 Mercado Raíz. Cayambe - Ecuador</div>
+<footer class="main-footer">
+    <div class="newsletter-section">
+        <h2>Suscríbete a Nuestro Boletín</h2>
+        <form class="newsletter-form">
+            <input type="email" placeholder="tu@email.com" required>
+            <button type="submit">Registrarse</button>
+        </form>
+    </div>
+
+    <div class="footer-content">
+        <div class="footer-column brand-col">
+            <h3>Mercado Raíz</h3>
+            <p>Conectando el campo de Cayambe con tu mesa bajo principios de comercio justo.</p>
+        </div>
+        <div class="footer-column">
+            <h3>Enlaces</h3>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="proveedor.html">Proveedores</a></li> </ul>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>&copy; 2026 Mercado Raíz - Cayambe, Ecuador</p>
+    </div>
 </footer>
 
-<script src="js/data.js"></script>
 <script src="js/main.js"></script>
 
 </body>
