--- a/categoria.html
+++ b/categoria.html
@@ -65,28 +65,46 @@
 </main>
 
 <!-- ================= FOOTER ================= -->
-<footer class="footer" id="contacto">
+<footer class="main-footer">
+    <div class="newsletter-section">
+        <h2>Suscríbete a Nuestro Boletín</h2>
+        <p>¡Obtén un descuento del 10% en tu primera compra! Recibe noticias y ofertas directamente en tu correo.</p>
+        <form class="newsletter-form">
+            <input type="email" placeholder="tu@email.com" required>
+            <button type="submit">Registrarse</button>
+        </form>
+        <p class="privacy-note">Respetamos tu privacidad. Nunca compartiremos tu información.</p>
+    </div>
 
-  <div class="footer-column">
-    <h3>Mercado Raíz</h3>
-    <p>
-      Plataforma de comercio justo que conecta productores
-      locales de Cayambe con consumidores responsables.
-    </p>
-  </div>
-
-  <div class="footer-column">
-    <h3>Enlaces rápidos</h3>
-    <a href="index.html">Inicio</a>
-    <a href="productos.html">Productos</a>
-    <a href="proveedor.html">Proveedores</a>
-    <a href="#contacto">Contacto</a>
-  </div>
-
-  <div class="footer-bottom">
-    © 2026 Mercado Raíz. Todos los derechos reservados.
-  </div>
-
+    <div class="footer-content">
+        <div class="footer-column brand-col">
+            <h3>Mercado Raíz</h3>
+            <p>Conectando productores locales con consumidores conscientes. Productos frescos, locales y de calidad para tu familia.</p>
+            <div class="social-links">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3>Enlaces Rápidos</h3>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="proveedores.html">Proveedores</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>Información de Contacto</h3>
+            <p><i class="fas fa-map-marker-alt"></i> Calle Principal 123, Cayambe, Ecuador</p>
+            <p><i class="fas fa-phone"></i> +593 99 999 9999</p>
+            <p><i class="fas fa-clock"></i> Lun - Sáb: 8:00 AM - 6:00 PM</p>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>&copy; 2026 Mercado Raíz. Todos los derechos reservados.</p>
+    </div>
 </footer>
 
 <!-- ================= SCRIPTS ================= -->
